Create basic presentable grid-based typography

--- a/pp-02/screen.css
+++ b/pp-02/screen.css
@@ -4,18 +4,48 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 /*
   TYPOGRAPHIC GRID PROPERTIES
-  Base font-size: 24px
-  Base line-height: 28px
+  Base font-size: 22px
+  Base line-height: 24px
   Modular scale: 1.25
-    https://www.modularscale.com/?24&px&1.25
+    https://www.modularscale.com/?20&px&1.25
 */
 
 html {
   /* Stolen from DuckDuckGo */
   font-family: "Proxima Nova", "Helvetica Neue", "Helvetica", "Segoe UI", "Nimbus Sans L", "Liberation Sans", "Open Sans", FreeSans, Arial, sans-serif;
 
-  font-size: 24px;
-  line-height: 28px;
-  padding: 14px;
+  font-size: 22px;
+  line-height: 24px;
+  padding: 18px;
 }
+
+h1 {
+  font-size: 42.969px;
+  line-height: 48px;
+  font-weight: bold;
+  padding-bottom: 24px;
 }
+
+h2,
+h3,
+ul,
+figure,
+p {
+  padding-bottom: 12px;
+}
+
+h2 {
+  font-size: 34.375px;
+  line-height: 36px;
+  font-weight: bold;
+}
+
+h3 {
+  font-size: 27.5px;
+  line-height: 36px;
+}
+
+ul {
+  padding-left: 24px;
+}
+
