--- a/pp-03/screen.css
+++ b/pp-03/screen.css
@@ -28,7 +28,9 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 
 /* ==== LAYOUT STYLES ==== */
 #content {
-
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-end;
 }
 
 #three,
