--- a/pp-03/screen.css
+++ b/pp-03/screen.css
@@ -62,5 +62,10 @@ a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,c
 }
 
 @media screen and (min-width: 800px) {
-
+  #three,
+  #two,
+  #one {
+    width: 33vw;
+    height: 33vw;
+  }
 }
